--- a/app/src/main/res/layout/layout_producted.xml
+++ b/app/src/main/res/layout/layout_producted.xml
@@ -66,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:lineSpacingExtra="4dp"
-                android:text="桂花鸭南京鸭桂花鸭南京鸭桂花鸭南京鸭桂花鸭南京鸭桂花鸭南京鸭桂花鸭南京鸭"
+                android:text=""
                 android:textColor="@color/textBlack"
                 android:textSize="14sp" />
 
