--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -309,7 +309,8 @@
                     android:layout_height="180dp">
                     <ImageView
                         android:id="@+id/iv_img1"
-                        android:scaleType="centerCrop"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitXY"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent" />
 
@@ -327,7 +328,8 @@
                         android:layout_weight="1">
                         <ImageView
                             android:id="@+id/iv_img2"
-                            android:scaleType="centerCrop"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitXY"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent" />
                     </LinearLayout>
@@ -345,7 +347,8 @@
                             android:layout_weight="1">
                             <ImageView
                                 android:id="@+id/iv_img3"
-                                android:scaleType="centerCrop"
+                                android:adjustViewBounds="true"
+                                android:scaleType="fitXY"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent" />
 
@@ -358,7 +361,8 @@
                             android:layout_weight="1">
                             <ImageView
                                 android:id="@+id/iv_img4"
-                                android:scaleType="centerCrop"
+                                android:adjustViewBounds="true"
+                                android:scaleType="fitXY"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent" />
 
