--- a/app/src/main/res/layout/layout_producted.xml
+++ b/app/src/main/res/layout/layout_producted.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
-                android:text="¥25"
+                android:text="¥"
                 android:textColor="@color/home_read"
                 android:textSize="14sp" />
             <LinearLayout
@@ -89,7 +89,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="@dimen/dp10"
-                    android:text="重量1Kg 口味盐水鸭"
+                    android:text="无"
                     android:textColor="@color/textGray"
                     android:textSize="14sp" />
 
