--- a/app/src/main/res/layout/popup_now_buy.xml
+++ b/app/src/main/res/layout/popup_now_buy.xml
@@ -21,8 +21,7 @@
                 android:layout_width="80dp"
                 android:layout_height="80dp"
                 android:layout_margin="15dp"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/shop_img" />
+                android:scaleType="fitXY" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -48,7 +47,7 @@
                         android:id="@+id/money"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="32"
+                        android:text="0"
                         android:textColor="@color/textMoney"
                         android:textSize="18sp" />
                 </LinearLayout>
