--- a/app/src/main/res/layout/tag_flow_tv.xml
+++ b/app/src/main/res/layout/tag_flow_tv.xml
@@ -9,7 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
+        android:text=""
         android:background="@drawable/normal_bg"
         android:textColor="@color/textBlack"
-        android:textSize="14sp"></TextView>
+        android:textSize="14sp"/>
 </LinearLayout>
