--- a/app/src/main/res/layout/item_my_prosearch.xml
+++ b/app/src/main/res/layout/item_my_prosearch.xml
@@ -30,8 +30,8 @@
                 android:id="@+id/item_ivmr_orderimg"
                 android:layout_width="90dp"
                 android:layout_height="90dp"
-                android:scaleType="centerCrop"
-                android:src="@mipmap/foot_print" />
+                android:scaleType="fitXY"
+                />
         </RelativeLayout>
 
         <LinearLayout
@@ -47,9 +47,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:text="桂花鸭南京盐水鸭"
+                android:text=""
                 android:textColor="@color/textBlack"
-                android:textSize="15sp" />
+                android:textSize="14sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -68,7 +68,7 @@
                         android:id="@+id/tv_pro_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="¥566.00元"
+                        android:text="¥"
                         android:textColor="@color/text_color_red"
                         android:textSize="13sp" />
 
@@ -77,7 +77,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:text="15人购买"
+                        android:text="人购买"
                         android:textColor="@color/textLightGray"
                         android:textSize="13sp" />
                 </LinearLayout>
