--- a/app/src/main/res/layout/activity_productdetails.xml
+++ b/app/src/main/res/layout/activity_productdetails.xml
@@ -29,6 +29,7 @@
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <RelativeLayout
+                    android:background="@color/white"
                     android:id="@+id/rl_my_header"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -37,6 +38,7 @@
                         android:id="@+id/iv_tice_head"
                         android:layout_width="match_parent"
                         android:layout_height="240dp"
+                        android:background="@color/white"
                         android:adjustViewBounds="true"
                         android:scaleType="fitXY" />
 
