--- a/app/src/main/res/layout/activity_buy.xml
+++ b/app/src/main/res/layout/activity_buy.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/llbuy"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/board"
     android:orientation="vertical"
     tools:context=".maincode.home.view.activity.BuyActivity">
 
-    <include layout="@layout/toolbar_layout" />
-
     <android.support.v4.widget.NestedScrollView
         android:id="@+id/scroll"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/llbottom"
+        android:layout_below="@+id/toolslayout">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -186,39 +187,35 @@
 
                     </RelativeLayout>
 
-                    <View
-                        android:background="@color/board"
-                        android:layout_width="match_parent"
-                        android:layout_height="5dp" />
 
                     <!--共几件商品-->
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
-                        android:layout_marginLeft="13dp"
-                        android:layout_marginRight="13dp"
-                        android:layout_marginTop="8dp"
-                        android:gravity="right">
+                    <!--<RelativeLayout-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginBottom="8dp"-->
+                    <!--android:layout_marginLeft="13dp"-->
+                    <!--android:layout_marginRight="13dp"-->
+                    <!--android:layout_marginTop="8dp"-->
+                    <!--android:gravity="right">-->
 
-                        <TextView
-                            android:id="@+id/tv1"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="共1件商品"
-                            android:textColor="@color/textBlack"
-                            android:textSize="14sp" />
+                    <!--<TextView-->
+                    <!--android:id="@+id/tv1"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="共1件商品"-->
+                    <!--android:textColor="@color/textBlack"-->
+                    <!--android:textSize="14sp" />-->
 
-                        <TextView
-                            android:id="@+id/tv_allprice"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:layout_toRightOf="@+id/tv1"
-                            android:text="¥"
-                            android:textColor="@color/text_RedDauk"
-                            android:textSize="14sp" />
-                    </RelativeLayout>
+                    <!--<TextView-->
+                    <!--android:id="@+id/tv_allprice"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_marginLeft="10dp"-->
+                    <!--android:layout_toRightOf="@+id/tv1"-->
+                    <!--android:text="¥"-->
+                    <!--android:textColor="@color/text_RedDauk"-->
+                    <!--android:textSize="14sp" />-->
+                    <!--</RelativeLayout>-->
 
 
                 </LinearLayout>
@@ -226,50 +223,67 @@
 
             </LinearLayout>
 
-
-            <!--底部按钮-->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:background="@color/white"
-                android:gravity="right">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:text="合计:"
-                    android:textColor="@color/textBlack"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:id="@+id/tv_hejiprice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:text="¥76.00"
-                    android:textColor="@color/text_RedDauk"
-                    android:textSize="14sp" />
-
-                <TextView
-                    android:id="@+id/tv_order"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:background="@color/home_read"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:paddingTop="10dp"
-                    android:text="提交订单"
-                    android:textColor="@color/white"
-                    android:textSize="14sp" />
-
-            </LinearLayout>
-
         </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
-</LinearLayout>
+    <include
+        android:id="@+id/toolslayout"
+        layout="@layout/toolbar_layout" />
+
+    <!--底部按钮-->
+    <LinearLayout
+        android:id="@+id/llbottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white"
+        android:orientation="vertical">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/fengexian" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="合计:"
+                android:textColor="@color/textBlack"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/tv_hejiprice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:text="¥"
+                android:textColor="@color/text_RedDauk"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/tv_order"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:background="@color/home_read"
+                android:paddingBottom="10dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="10dp"
+                android:text="提交订单"
+                android:textColor="@color/white"
+                android:textSize="14sp" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+</RelativeLayout>
